# Witch

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PROMPTS.md  vcpkg.json
.github/workflows/: ci.yml  claude-review.yml  claude.yml
Docs/: Logger.md  RefactoringNotes.md  RemainingWork.md
Engine/Include/WitchEngine/Audio/: AudioClip.h  IAudio.h
Engine/Include/WitchEngine/Core/: Application.h  Engine.h  FixedStepAccumulator.h  FixedString.h  GameLoop.h  Logger.h  Memory.h  ObjectRegistry.h  ResourceManager.h  Services.h  TextureInfo.h  Time.h  Version.h.in
Engine/Include/WitchEngine/Core/Log/: Category.h  CategoryFilter.h  ConsoleSink.h  DebugOutputSink.h  DetailedTextFormatter.h  FileSink.h  ILogFilter.h  ILogFormatter.h  ILogSink.h  LevelFilter.h  LogLevel.h  LogView.h  PlainTextFormatter.h  ViewerSink.h
Engine/Include/WitchEngine/Debug/: DebugDraw.h  DebugMenu.h  DebugMenuItem.h  HierarchyWindow.h  LogViewerWindow.h  ProfilerHud.h
Engine/Include/WitchEngine/Graphics2D/: Anchor.h  AnimationComponent.h  AsepriteComponent.h  AsepriteSheet.h  Camera2D.h  CameraManager.h  LayerSortKey.h  SpriteComponent.h  TilemapComponent.h
Engine/Include/WitchEngine/Input/: IInput.h  Key.h
Engine/Include/WitchEngine/Level/: LevelData.h
Engine/Include/WitchEngine/Physics2D/: Aabb.h  CollisionComponent.h  CollisionWorld.h  TileCollision.h
Engine/Include/WitchEngine/Rhi/: IRenderer.h  RhiTypes.h
Engine/Include/WitchEngine/Scene/: Component.h  ComponentScheduler.h  DebugUI.h  GameObject.h  Scene.h  Transform.h  UpdatePhase.h
Engine/Include/WitchEngine/Vfs/: DiskSource.h  FileData.h  IFileSource.h  Vfs.h
Engine/Shaders/: DebugLine.hlsl  Sprite.hlsl
Engine/Source/Audio/: AudioFactory.h  MiniaudioAudio.cpp
Engine/Source/Core/: Application.cpp  Engine.cpp  GameLoop.cpp  Logger.cpp  Memory.cpp  ObjectRegistry.cpp  ProfileCollector.cpp  ProfileCollector.h  Profiling.h  ResourceManager.cpp  Time.cpp
Engine/Source/Core/Log/: ConsoleSink.cpp  DebugOutputSink.cpp  DetailedTextFormatter.cpp  FileSink.cpp  LogRecord.h  PlainTextFormatter.cpp  TextBuffer.cpp  TextBuffer.h  TimestampFormat.h  ViewerSink.cpp
Engine/Source/Debug/: DebugDraw.cpp  DebugMenu.cpp  HierarchyWindow.cpp  LogViewerWindow.cpp  ProfilerHud.cpp
Engine/Source/Graphics2D/: AnimationComponent.cpp  AsepriteComponent.cpp  AsepriteLoader.cpp  AsepriteLoader.h  CameraManager.cpp  SpriteComponent.cpp  TilemapComponent.cpp
Engine/Source/Level/: LdtkLoader.cpp  LdtkLoader.h
Engine/Source/Physics2D/: CollisionComponent.cpp  CollisionWorld.cpp  TileCollision.cpp
Engine/Source/Platform/: Memory.h  PlatformFactory.h  PlatformPaths.h  PlatformWindow.h
Engine/Source/Platform/Windows/: Memory.cpp  PlatformFactory.cpp  PlatformPaths.cpp  PlatformWindow.cpp  Win32Input.cpp  Win32Input.h  Win32InputFactory.cpp
Engine/Source/Rhi/D3D12/: D3D12CommandList.h  D3D12Factory.cpp  D3D12Renderer.cpp  D3D12Renderer.h
Engine/Source/Scene/: ComponentScheduler.cpp  GameObject.cpp  Scene.cpp
Engine/Source/Vfs/: DiskSource.cpp  Vfs.cpp  VfsPathUtil.cpp  VfsPathUtil.h
Engine/Tests/: CMakeLists.txt  CollisionComponentTests.cpp  ComponentSchedulerTests.cpp  ComponentTypeIdTests.cpp  FixedStepAccumulatorTests.cpp  LdtkLoaderTests.cpp  SceneTests.cpp  TestHelpers.h  TileCollisionTests.cpp  VfsPathUtilTests.cpp
Engine/Tests/Fixtures/: Collision.ldtk  CollisionSlope.ldtk  Entities.ldtk
Game/Source/: GameConfig.h  Main.cpp  Version.h.in
Game/Source/Components/: PlayerControllerComponent.cpp  PlayerControllerComponent.h
Game/Source/Entities/: PlayerObject.cpp  PlayerObject.h
Game/Source/Scenes/: EmptyScene.cpp  EmptyScene.h  StageScene.cpp  StageScene.h
Scripts/: Generate.bat  Generate.ps1  OpenSolution.bat  OpenSolution.ps1  README.md  Run.bat  Run.ps1
Tools/: GenerateTestSheet.ps1
triplets/: x64-windows-mimalloc-static.cmake
